# casper-x402

./: .gitignore  ARCHITECTURE.md  CONTRACT_FRONTEND_INTEGRATION.md  FACILITATOR_SETUP.md  FIXES_APPLIED.md  FRONTEND_SETUP.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_INTEGRATION.md  backend_test.sh  deploy_nuclear.py  start-workshop.sh  test-real-transaction.js  test_nuclear_clean.py  test_nuclear_clean_properties.py
cep18-permit-token/: Cargo.toml  DEPLOYMENT_SUCCESS.md  deploy_cep18_direct.py  deploy_cep18_token.py  deploy_minimal.py  deploy_simple_cep18.py  deploy_ultra_minimal.py  requirements.txt  test_deploy.py
cep18-permit-token/src/: absolute_minimal.rs  constants.rs  fixed_minimal.rs  hardcoded_minimal.rs  lib.rs  minimal.rs  storage.rs  ultra_minimal.rs
contract/: CHANGELOG.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_INSTRUCTIONS.md  Odra.toml  deploy-direct.sh  deploy-rpc.sh  deploy-simple.sh  deploy-with-auth.sh  deploy.json  deploy.py  deploy.sh  deploy_final.json  deploy_final.py  deploy_fix.py  deploy_retry.py  payload.json
contract/keys/: public_key.pem  public_key_hex  secret_key.pem
contract/src/: lib.rs
facilitator-standalone/: Cargo.toml
facilitator-standalone/src/: main.rs
final-facilitator/: CLEANUP_SUMMARY.md  Cargo.toml  DEPLOYMENT_DETAILS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  EXAMPLES_INTEGRATION_GUIDE.md  EXAMPLES_SUMMARY.md  EXAMPLES_USAGE_NOTE.md  IMPLEMENTATION_NOTES.md  README.md  TESTING.md  TESTNET_DEPLOYMENT_GUIDE.md  TEST_SUMMARY.md  check_balance.py  check_deployment.py  deploy.py  deploy_facilitator.py  deploy_hash.txt  deploy_hash_backup.txt  deploy_x402_contracts.py  manual_deploy.sh  run_tests.sh  simulate_deployment.py  test_examples.sh  test_facilitator.py  verify_examples.py
final-facilitator/.github/workflows/: test.yml
final-facilitator/benches/: contract_benchmarks.rs
final-facilitator/docs/x402/demo/: .env  .env.example  DEMO_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  QUICK_START.md  README.md  create-keys.js  debug-casper.js  debug-deploy.js  debug-keys.js  fix-keys.js  manual-keys.js  package-lock.json  package.json  test-keys.js  test-payment.js
final-facilitator/docs/x402/demo/api/: package-lock.json  package.json  server.js
final-facilitator/docs/x402/demo/api/middleware/: x402-middleware.js
final-facilitator/docs/x402/demo/api/services/: payment-service.js
final-facilitator/docs/x402/demo/casper-sdk/: wrapper.js
final-facilitator/docs/x402/demo/client/: demo.js  package-lock.json  package.json
final-facilitator/docs/x402/demo/client/services/: casper-client.js  payment-client.js
final-facilitator/docs/x402/demo/facilitator/: package-lock.json  package.json  server.js
final-facilitator/docs/x402/demo/facilitator/services/: casper-service.js  payment-service.js  validation-service.js
final-facilitator/docs/x402/demo/keys/: facilitator-public.pem  facilitator-secret.pem  key-info.json  payer-public.pem  payer-secret.pem
final-facilitator/docs/x402/demo/scripts/: generate-keys.js  setup.sh  test-integration.js
final-facilitator/examples/: README.md  usage.rs
final-facilitator/examples/advanced/: integration_test.rs
final-facilitator/examples/getting-started/basic/: fee_calculation.rs  token_management.rs
final-facilitator/examples/getting-started/demo/: main.rs
final-facilitator/examples/integration/: payment_processor.rs
final-facilitator/src/: absolute_minimal.rs  access_control.rs  admin.rs  constants.rs  default_params.rs  errors.rs  events.rs  exact_copy.rs  fee.rs  fee_management.rs  fixed_minimal.rs  lib.rs  minimal_facilitator.rs  no_params.rs  price.rs  safe_params.rs  security.rs  simple_lib.rs  storage.rs  token_registry.rs  types.rs  ultra_basic.rs  ultra_minimal.rs  vault_operations.rs  working_facilitator.rs  working_minimal.rs  zero_params.rs
final-facilitator/src/rpc_server/method/: estimate_tx_fees.rs  get_blockhash.rs  get_config.rs  get_payer_signer.rs  get_supported_token.rs  sign_and_send_tx.rs  sign_tx.rs  transfer_tx.rs
final-facilitator/src/rpc_server/openapi/: docs.rs  helper.rs
final-facilitator/src/signer/: config.rs  init.rs  keypair_util.rs  pool.rs  signer.rs  util.rs
final-facilitator/src/token/: interface.rs
final-facilitator/src/tx/: instruction_util.rs  transaction.rs  versioned_message.rs  versioned_tx.rs
final-facilitator/src/usage_limit/: usage_store.rs  usage_tracker.rs
final-facilitator/src/validator/: account_validator.rs  config_validator.rs  macros.rs  math_validator.rs  tx_validator.rs
final-facilitator/test-runner/: Cargo.toml  run_all_tests.sh
final-facilitator/test-runner/src/: access_control.rs  fee_calculator.rs  lib.rs  state_management.rs  validation.rs
final-facilitator/tests/: README.md  casper-vault-facilitator.wasm  lib.rs  pure_logic_tests.rs  simple_test.rs  standalone_tests.rs  test_admin.rs  test_fees.rs  test_integration.rs  test_property.rs  test_queries.rs  test_security.rs  test_transactions.rs  unit_tests.rs
final-facilitator/tests/common/: mod.rs
my-project/: CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_SUMMARY.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_DEPLOYMENT_STATUS.md  LIVE_DEPLOYMENT_GUIDE.md  build_real_flipper_wasm.py  check_balance_and_deploy.py  create_proper_wasm.py  create_valid_casper_wasm.py  deploy_flipper_direct.py  deploy_simple.py  derive_account_hash.py  fund_account.py
my-project/keys/: Account 1_secret_key.pem  public_key.pem  public_key_hex  secret_key.pem
my-project/proptest-regressions/tests/: mod.txt
my-project/src/: deployment_test.rs  lib.rs  minimal_contract.rs
my-project/src/tests/: mod.rs
(+96 files in other folders)
