[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[features]
cli = ["odra-cli"]

[dependencies]
odra = { version = "2.4.0", default-features = false }
odra-cli = { version = "2.4.0", features = [], default-features = false, optional = true } 

[dev-dependencies]
odra-test = { version = "2.4.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.4.0", features = [], default-features = false }

[[bin]]
name = "my_project_build_contract"
path = "bin/build_contract.rs"
test = false



[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
