[package]
name = "casper-vault-facilitator"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "4.0.0"
casper-types = "4.0.0"

[dev-dependencies]
proptest = "1.0"
casper-engine-test-support = "4.0.0"
casper-execution-engine = "4.0.0"
once_cell = "1.19"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[[bench]]
name = "contract_benchmarks"
harness = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "exact_cep18_copy"
path = "src/exact_cep18_copy.rs"

[[bin]]
name = "no_params"
path = "src/no_params.rs"

[[bin]]
name = "zero_params"
path = "src/zero_params.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
overflow-checks = false